# timbermap2

./: .gitignore  maquina.txt
apps/api/: Dockerfile  database.py  geoserver.py  main.py  pyproject.toml  requirements.txt  stats.py  superadmin.py  tasks.py  webhooks.py
apps/web/: .gcloudignore  .gitignore  Dockerfile  cors.json  package-lock.json  package.json
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/app/: ContactForm.tsx  Landing.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/api/catalog/[...path]/: route.ts
apps/web/src/app/api/contact/: route.ts
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/admin/: page.tsx
apps/web/src/app/dashboard/catalog/: page.tsx
apps/web/src/app/dashboard/images/: page.tsx
apps/web/src/app/dashboard/jobs/: page.tsx
apps/web/src/app/dashboard/map/: page.tsx
apps/web/src/app/dashboard/models/: page.tsx
apps/web/src/app/dashboard/vectors/: page.tsx
apps/web/src/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/src/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/src/components/: Sidebar.tsx  Spinner.tsx
workers/cleanup/: Dockerfile  main.py
workers/geoserver/: Dockerfile  geoserver.env
workers/ml/: Dockerfile  db.py  deploy_ml_worker.sh  geo_utils.py  main.py  model_loader.py  pipeline.py  tile_processor.py
workers/ml/runners/: blob_detection.py  hough_lines.py  zonal_grid.py
workers/raster/: Dockerfile  gaps_analyzer.py  geoserver.py  main.py  pyproject.toml
workers/vector/: Dockerfile  db.py  geoserver.py  main.py  pyproject.toml
