[project]
name = "timbermap-raster-worker"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "google-cloud-storage (>=3.10.0,<4.0.0)",
    "google-cloud-secret-manager (>=2.26.0,<3.0.0)",
    "google-cloud-tasks (>=2.21.0,<3.0.0)",
    "google-cloud-pubsub (>=2.36.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rasterio (>=1.5.0,<2.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
